# pyurbanair

./: .gitignore  .gitmodules  README.md  TROUBLESHOOTING.md  conda-pypi-mapping.json  config.sh  infile.in  plot_state.py  pyproject.toml
.claude/: SESSION_NOTES_parallel_multinode_srun.md
activation_scripts/: cuda_activation.sh  delftblue_activation.sh  delftblue_pyurbanair_activation.sh  install_nvhpc.sh  install_nvhpc_netcdf.sh  snellius_activation.sh
conf/: config.yaml  ensemble.yaml  esmda.yaml  generate_training_data.yaml  parameters.yaml  paths.yaml  run_esmda.yaml  run_parameter_esmda.yaml  run_rollout_esmda.yaml  run_state_and_parameter_esmda.yaml  run_time_varying_parameter_esmda.yaml  time.yaml  time_varying_rollout_esmda.yaml
docs/: codebase_guide.md  ensemble_scaling.md  esmda_dynamic_multiwindow.md  neural_surrogate_branch_review.md  neural_surrogate_plan.md  neural_surrogate_training.md  neural_surrogates.md  palm_ground_topography_issue.md  palm_overhead_plan.md  pypalm_zero_field_debug.md  reduced_state_da.md  state_and_localization_esmda.md  training_data.md  unet_convnext.md  upt_integration_notes.md  upt_surrogate_plan.md
latex/: .gitignore  compile.sh  macros.tex  references.bib  report.tex
lbm_results/: state.nc
libs/data-assimilation/: pyproject.toml
libs/data-assimilation/src/data_assimilation/: interpolation.py  observation_operator.py  reduction.py
libs/data-assimilation/src/data_assimilation/localization/: base.py  correlation.py  distance.py
libs/data-assimilation/src/data_assimilation/smoothing/: base.py  esmda.py
libs/neural-surrogates/: pyproject.toml
libs/neural-surrogates/src/neural_surrogates/: __init__.py  data.py  ensemble_forward_model.py  forward_model.py  geometry.py  training.py
libs/neural-surrogates/src/neural_surrogates/architectures/: __init__.py  simple_conv.py  unet_convnext.py  upt.py
libs/neural-surrogates/src/neural_surrogates/architectures/_upt/: LICENSE  __init__.py  approximator.py  decoder.py  encoder.py  supernode_pooling.py
libs/neural_surrogates/: README.md  pyproject.toml
libs/neural_surrogates/src/neural_surrogates/: __init__.py  ensemble_forward_model.py  forward_model.py  rollout.py
libs/neural_surrogates/src/neural_surrogates/architectures/: __init__.py  base.py  registry.py  unet3d.py
libs/neural_surrogates/src/neural_surrogates/data/: __init__.py  dataset.py  generate.py  grid.py  normalization.py
libs/neural_surrogates/src/neural_surrogates/training/: __init__.py  checkpoint.py  conditioning.py  loop.py  sharding.py  train.py
libs/neural_surrogates/src/neural_surrogates/utils/: __init__.py  params_io.py  registry.py  schema.py  state_io.py
libs/neural_surrogates/tests/: test_ensemble_forward.py  test_gate_eval.py  test_interface.py  test_io_roundtrip.py  test_review_fixes.py  test_smoke_training.py  test_train_run.py  test_unet3d.py
libs/pylbm/: .gitignore  makefile.macos  pyproject.toml
libs/pylbm/src/pylbm/: __init__.py  compile_program.py  ensemble_forward_model.py  forward_model.py  rollout_forward_model.py  stl_to_lbm.py  write_to_fortran.py
libs/pylbm/src/pylbm/utils/: __init__.py  compile_utils.py  dir_utils.py  environment_utils.py  forward_model_utils.py  infile_utils.py  makefile_utils.py  mod_dimensions_utils.py  params_utils.py  rollout_utils.py  state_utils.py  vertical_profile.py  warm_start_utils.py
libs/pypalm/: pyproject.toml
libs/pypalm/shell_scripts/: execute.sh  install_palm.sh
libs/pypalm/src/pypalm/: __init__.py  direct_palm.py  ensemble_forward_model.py  forward_model.py  stl_to_palm.py
libs/pypalm/src/pypalm/utils/: __init__.py  clean_up_utils.py  compile_utils.py  dir_utils.py  dynamic_driver_utils.py  forward_model_utils.py  inflow_utils.py  p3d_utils.py  vertical_profile.py  warm_start_utils.py
libs/pypalm/tests/: test_dynamic_driver.py  test_forward_model_failure.py
libs/pyudales/: .gitignore  pyproject.toml
libs/pyudales/shell_scripts/: build_preprocessing_macos.sh  build_udales_macos.sh  local_execute.sh  write_inputs.sh
libs/pyudales/src/pyudales/: __init__.py  angle_utils.py  ensemble_forward_model.py  file_utils.py  forward_model.py  rollout_forward_model.py
libs/pyudales/src/pyudales/python_udgeom/: __init__.py  ibm.py  preprocessing.py  seb.py  write_inputs.py
libs/pyudales/src/pyudales/utils/: __init__.py  clean_up_utils.py  config_utils.py  dir_utils.py  file_update_utils.py  file_utils.py  forward_model_utils.py  grid_utils.py  inflow_utils.py  namoptions_utils.py  ncpu_utils.py  nudging_utils.py  params_utils.py  random_utils.py  rollout_utils.py  run_monitor.py  save_frequency_utils.py  vertical_profile.py  warm_start_utils.py
scripts/: _bench_local_execute.sh  _common.py  _diag.py  _main_lbm.py  add_geometry_to_training_data.py  animation.py  benchmark_ensemble_parallelism.py  benchmark_ensemble_scaling.py  benchmark_lbm_ensemble_scaling.py  benchmark_palm_ensemble_scaling.py  compare_localization.sh  compare_sweep_results.py  compute_sweep_metrics.py  config.py  config_small.py  convert_ground_truth_to_32bit.py  dataloading.py  diagnose_cross_model_obs.py  diagnose_obs_operator_choices.py  esmda_lbm.py  esmda_lbm_with_udales_data.py  esmda_udales.py  eval_surrogate_gate.py  finish_training_data_processing.py  generate_neural_surrogate_data.py  generate_training_data.py  main.py  main_lbm.py  main_lbm_ensemble.py  main_lbm_rollout.py  main_lbm_rollout_ensemble.py  main_lbm_rollout_from_xarray.py  main_udales.py  main_udales_ensemble.py  main_udales_ensemble_rollout.py  main_udales_netcdf_to_warmstart.py  main_udales_warm_restart.py  main_udales_warm_restart_ensemble.py  main_udales_warmstart_from_lbm.py  main_udales_warmstart_from_xarray.py  (+32 more)
scripts_new/: __init__.py  config.py  run_parameter_esmda.py
tests/: _nudging_utils.py  config.py  conftest.py  test_ensemble_failure_handling.py  test_hydra_config.py  test_inflow_angle_parity.py  test_inflow_angle_simulation_sign.py  test_inflow_body_force.py  test_lbm_inflow_profile.py  test_localization.py  test_namoptions_utils.py  test_neural_surrogate_forward.py  (+24 more)
(+293 files in other folders)
