[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{name = "Nikolaj T. Mücke", email = "nmucke@gmail.com"}]
dependencies = [
  "numpy>=2.3.5,<3",
  "xarray>=2025.12.0,<2026",
  "netcdf4>=1.7.3,<2",
  "matplotlib>=3.10.8,<4",
  "jax>=0.7.0,<0.8.0",
  "tqdm>=4.67.1,<5",
  "vape4d>=0.2.0,<0.3.0",
  "hydra-core>=1.3,<2",
]
name = "pyurbanair"
requires-python = ">= 3.12,<3.13"
version = "0.1.0"

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = ["conda-forge","robostack"]
platforms = ["osx-arm64","linux-64"]
conda-pypi-map = { "conda-forge" = "./conda-pypi-mapping.json" }

# conda-pypi-map = { "conda-forge" = "https://raw.githubusercontent.com/prefix-dev/parselmouth/main/files/mapping_as_grayskull.json" }

[tool.pixi.package.build]
backend = {name = "pixi-build-python", version = "*", channel = "https://prefix.dev/conda-forge" }

[tool.hatch.build.targets.wheel]
packages = ["src/pyurbanair"]

[tool.pixi.feature.py312.dependencies]
python = {version="~=3.12.10", channel="conda-forge"}

# Pixi dependencies
[tool.pixi.dependencies]
python = ">=3.12"
pdbpp = ">=0.11.7,<0.12"
xarray = ">=2025.12.0,<2026"
netcdf4 = ">=1.7.3,<2"
numpy = ">=2.3.5,<3"
matplotlib = ">=3.10.8,<4"
trimesh = ">=4.10.1,<5"
rtree = ">=1.4.1,<2"
networkx = ">=3.6.1,<4"
scipy = ">=1.16.3,<2"
hydra-core = ">=1.3,<2"

[tool.pixi.feature.udales.dependencies]
cmake = {version=">3.5.0,<4.0", channel="conda-forge"}
netcdf-fortran = {version=">=4.0.0", channel="conda-forge"}
gcc = {version=">=15.2.0", channel="conda-forge"}
gfortran = {version=">=15.2.0", channel="conda-forge"}
fftw = {version=">=3.3.8.0", channel="conda-forge"}
openmpi = {version=">=4.1.0", channel="conda-forge"}
nco = {version=">=5.3.6", channel="conda-forge"}

[tool.pixi.feature.lbm.dependencies]
fftw = {version=">=3.3.10", channel="conda-forge"}
libnetcdf = {version=">=4.9.3", channel="conda-forge"}
netcdf-fortran = {version=">=4.6.2", channel="conda-forge"}
gfortran = {version=">=15.2.0", channel="conda-forge"}
gcc = {version=">=15.2.0", channel="conda-forge"}
openmpi = {version=">=4.1.0", channel="conda-forge"}

[tool.pixi.feature.palm.dependencies]
cmake = {version=">3.5.0,<4.0", channel="conda-forge"}
netcdf-fortran = {version=">=4.6.2", channel="conda-forge"}
gcc = {version=">=15.2.0", channel="conda-forge"}
gfortran = {version=">=15.2.0", channel="conda-forge"}
fftw = {version=">=3.3.10", channel="conda-forge"}
openmpi = {version=">=4.1.0", channel="conda-forge"}
libnetcdf = {version=">=4.9.3", channel="conda-forge"}
coreutils = {version=">=9.0", channel="conda-forge"}

[tool.pixi.feature.delftblue.activation]
scripts = ["activation_scripts/delftblue_activation.sh"]

[tool.pixi.pypi-dependencies]
pyurbanair = { path = ".", editable = true }

[tool.pixi.feature.udales.pypi-dependencies]
pyudales = { path = "libs/pyudales", editable = true }

[tool.pixi.feature.lbm.pypi-dependencies]
pylbm = { path = "libs/pylbm", editable = true }

[tool.pixi.feature.palm.pypi-dependencies]
pypalm = { path = "libs/pypalm", editable = true }

[tool.pixi.feature.data-assimilation.pypi-dependencies]
data-assimilation = { path = "libs/data-assimilation", editable = true }

# Neural-surrogate framework (libs/neural_surrogates). NN-only deps; no
# Fortran/MPI. Added to `dev`, `cuda`, and `delftblue` — NOT `default` — so the
# import-light `default` env stays free of the JAX NN stack. GPU JAX comes from
# the `cuda` feature; CPU envs keep JAX_PLATFORMS=cpu.
[tool.pixi.feature.neural_surrogates.dependencies]
zarr = ">=2.17,<3"

[tool.pixi.feature.neural_surrogates.tasks]
generate-surrogate-data = { cmd = "python scripts/generate_neural_surrogate_data.py", description = "Generate a neural-surrogate training corpus from a Fortran solver (§5)" }
train-surrogate = { cmd = "python scripts/train_surrogate.py", description = "Train a neural surrogate, single GPU (§6)" }
train-surrogate-multi = { cmd = "python scripts/train_surrogate.py sharding.data_parallel=true", description = "Train a neural surrogate, data-parallel multi-GPU (§6.4)" }
eval-surrogate-gate = { cmd = "python scripts/eval_surrogate_gate.py", description = "Run the §13 GATE bars on a trained checkpoint (go/no-go)" }

[tool.pixi.feature.neural_surrogates.pypi-dependencies]
equinox = ">=0.11,<0.13"
optax = ">=0.2,<0.3"
orbax-checkpoint = ">=0.6"
jaxtyping = ">=0.2"
neural_surrogates = { path = "libs/neural_surrogates", editable = true }

# Development tasks
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pyurbanair"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true



[tool.pytest.ini_options]
addopts = "-v"

[tool.pixi.feature.dev.dependencies]
pytest= ">=8.3.5,<8.4"
pre-commit = {version="~=4.1.0", channel="conda-forge"}
black = {version="~=24.1.0", channel="conda-forge"}
isort = {version="~=6.0.0", channel="conda-forge"}
mypy = {version="~=1.15.0", channel="conda-forge"}


# Workaround for a file/directory clash between two transitive deps in the
# dev env: `coreutils` (palm feature) ships `bin/test` as a file, while
# `tempest-remap` (pulled in by `nco` in the udales feature) ships scripts
# under `bin/test/` as a directory. `pixi install -e dev` aborts the first
# time because the file blocks the directory; deleting the file and
# re-running lets tempest-remap claim the path. Run `pixi run setup-dev`
# once after cloning instead of `pixi install -e dev` directly.
[tool.pixi.tasks]
setup-dev = { cmd = "pixi install -e dev || (rm -f .pixi/envs/dev/bin/test && pixi install -e dev)", description = "Bootstrap dev env (works around coreutils/tempest-remap bin/test conflict)" }

[tool.pixi.feature.dev.tasks]
"py.test" = { cmd = "py.test tests --exitfirst", description = "Run tests" }
pre-commit = { cmd = "pre-commit run", description = "Run pre-commit hooks on specific files" }
format = { cmd = "black src", description = "Format code" }
type-check = { cmd = "mypy src", description = "Type check code" }
sort-imports = { cmd = "isort src", description = "Sort imports" }

[tool.pixi.feature.benchmark_geometry.dependencies]
numpy = "*"
matplotlib = "*"
typer = "*"

[tool.pixi.feature.cuda.dependencies]
# NVIDIA CUDA toolkit and drivers are system-level and should be installed from NVIDIA:
# https://developer.nvidia.com/cuda-downloads
curl = ">=8.0.0,<9"

[tool.pixi.feature.cuda.activation]
scripts = ["activation_scripts/cuda_activation.sh"]

[tool.pixi.feature.cuda.tasks]
install-nvhpc = { cmd = "bash activation_scripts/install_nvhpc.sh", description = "One-time download + install of the NVIDIA HPC SDK (nvfortran, ~16 GB) into the cuda env. Required before GPU pylbm/uDALES builds." }

# CPU-only environments: silence JAX's CUDA-discovery clutter.
#   PYTHONNOUSERSITE stops an incompatible jax_cuda12_plugin in the user's
#     ~/.local site-packages from leaking into the env (the source of the
#     "plugin ... not compatible" RuntimeWarning and the cuDNN traceback).
#   JAX_PLATFORMS=cpu suppresses the residual "NVIDIA GPU may be present,
#     falling back to cpu" warning.
# Both export to subprocesses, so parallel forward-model workers stay quiet
# too. Kept out of the shared `dev` feature so the GPU-capable `cuda` and
# `delftblue` environments are not forced onto CPU.
[tool.pixi.feature.cpu.activation.env]
PYTHONNOUSERSITE = "1"
JAX_PLATFORMS = "cpu"


[tool.pixi.environments]
default = { features = ["py312", "cpu"] }
dev = { features = ["dev", "py312", "udales", "data-assimilation", "lbm", "palm", "neural_surrogates", "benchmark_geometry", "cpu"] }
delftblue = { features = ["delftblue", "dev", "py312", "udales", "data-assimilation", "lbm", "palm", "neural_surrogates"] }
cuda = { features = ["dev", "py312", "udales", "data-assimilation", "lbm", "palm", "neural_surrogates", "cuda"] }
