[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{name = "Nikolaj T. Mücke", email = "nmucke@gmail.com"}]
dependencies = [
    "numpy>=2.3.5,<3",
    "xarray>=2025.12.0,<2026",
    "netcdf4>=1.7.3,<2",
    "torch>=2.4,<3",
]
name = "neural_surrogates"
requires-python = ">= 3.12,<3.13"
version = "0.1.0"

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.package.build]
backend = {name = "pixi-build-python", version = "*", channel = "https://prefix.dev/conda-forge" }

[tool.hatch.build.targets.wheel]
packages = ["src/neural_surrogates"]

[tool.pixi.dependencies]
xarray = ">=2025.12.0,<2026"
netcdf4 = ">=1.7.3,<2"
numpy = ">=2.3.5,<3"
pytorch = ">=2.4,<3"

[tool.pixi.pypi-dependencies]
neural-surrogates = { path = "libs/neural_surrogates", editable = true }
pyurbanair = { path = "../..", editable = true }
