[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{name = "Nikolaj T. Mücke", email = "nmucke@gmail.com"}]
dependencies = [
  "jax",
  "equinox",
  "jaxtyping",
  "optax",
  "orbax-checkpoint",
  "zarr",
  "numpy",
  "xarray",
  "scipy",
]
name = "neural_surrogates"
requires-python = ">= 3.12,<3.13"
version = "0.1.0"

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.package.build]
backend = {name = "pixi-build-python", version = "*", channel = "https://prefix.dev/conda-forge" }

[tool.hatch.build.targets.wheel]
packages = ["src/neural_surrogates"]

[tool.pixi.pypi-dependencies]
neural_surrogates = { path = ".", editable = true }
