[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{name = "Nikolaj T. Mücke", email = "nmucke@gmail.com"}]
dependencies = ["trimesh", "numpy", "rtree"]
name = "pylbm"
requires-python = ">= 3.12,<3.13"
version = "0.1.0"

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.package.build]
backend = {name = "pixi-build-python", version = "*", channel = "https://prefix.dev/conda-forge" }

[tool.hatch.build.targets.wheel]
packages = ["src/pylbm"]

[tool.pixi.dependencies]
python = {version=">=3.12, <3.13", channel="conda-forge"}
netcdf-fortran = {version=">=4.6.2", channel="conda-forge"}
gcc = {version=">=15.2.0", channel="conda-forge"}
gfortran = {version=">=15.2.0", channel="conda-forge"}
fftw = {version=">=3.3.10", channel="conda-forge"}

[tool.pixi.pypi-dependencies]
pylbm = { path = ".", editable = true }

[tool.pixi.tasks]
